// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkMessage schema (0) match fails for invalid config -> empty: empty 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'MessageId'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m[31m  must have required property 'MessageType'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m[31m  must have required property 'PublisherId'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m[31m  must have required property 'Messages'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m"
`;

exports[`NetworkMessage schema (1) match fails for invalid config -> Network message with unsupported property: Network message with unsupported property 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'unsupported'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     NetworkMessage.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`NetworkMessage schema (2) match fails for invalid config -> Network message without MessageId: Network message without MessageId 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'MessageId'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m"
`;

exports[`NetworkMessage schema (3) match fails for invalid config -> Network message without MessageType: Network message without MessageType 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'MessageType'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m"
`;

exports[`NetworkMessage schema (4) match fails for invalid config -> Network message without PublisherId: Network message without PublisherId 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'PublisherId'[39m
[31m    Path:     NetworkMessage.schema.json#/required[39m
[31m[39m"
`;
